# Aivoa-Assessment

./: .gitignore  QMS_Visual_Slides_Outline.md  README.md  TASK2_QMS.md  TECHNICAL_ARCHITECTURE.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/agent/: graph.py  llm.py  prompts.py  state.py
backend/app/agent/tools/: __init__.py  _coerce.py  edit_interaction.py  log_interaction.py  recommend_next_action.py  schedule_followup.py  search_hcp.py  summarize_history.py
backend/app/api/v1/: chat.py  hcps.py  health.py  interactions.py  router.py
backend/app/core/: config.py  database.py  deps.py  logging.py
backend/app/models/: __init__.py  follow_up.py  hcp.py  interaction.py  product.py
backend/app/repositories/: follow_up_repo.py  hcp_repo.py  interaction_repo.py
backend/app/schemas/: chat.py  follow_up.py  hcp.py  interaction.py
backend/app/scripts/: seed.py
backend/tests/: conftest.py  test_agent_tools.py  test_graph.py  test_interactions_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: index.css  main.tsx  types.ts
frontend/src/components/: ChatPanel.tsx  EditInteractionModal.tsx  HCPSelector.tsx  InteractionList.tsx  LogInteractionScreen.tsx  StructuredForm.tsx
frontend/src/store/: api.ts  chatSlice.ts  index.ts  uiSlice.ts
